# MathLib

./: CMakeList.txt  CMakeLists.txt  MathLib.vcxproj  MathLib.vcxproj.filters  README.md  Vector2d.cpp  Vector2d.h  main.cpp  vector3d.cpp  vector3d.h
cmake/: MathLibConfig.cmake.in
examples/: demo.cpp
include/mathlib (2)/core/: almost_equal.hpp  constants.hpp
include/mathlib (2)/linalg/: matrix.hpp
include/mathlib/calculus/: diff.hpp  grad.hpp  integrate.hpp  integrate_vec.hpp  root.hpp
include/mathlib/core/: error.hpp
include/mathlib/linalg/: solve.hpp  vector.hpp
include/mathlib/ode/: solvers.hpp
legacy/: MathLib.sln  MathLib.vcxproj
tests/: test_calculus.cpp  test_core.cpp  test_linalg.cpp  test_next_math.cpp  test_solve.cpp
